--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,18 @@
 .*
 !.gitignore
+# MAC_OSX cache files
+.DS_Store
+.env
+*.log
+# python relative files
+*.pyc
+*.pyo
+*.pyd
+__pycache__/
+.cache/
+../.cache/
+.vscode/
+../.vscode/
+# python cache files
+source_file/
+../source_file/
